--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,10 +7,20 @@
     app:srlEnableLoadMore="true"
     app:srlEnableAutoLoadMore="true">
 
+    <com.scwang.smartrefresh.layout.header.ClassicsHeader
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:srlEnableLastTime="true"
+        app:srlClassicsSpinnerStyle="FixedBehind"
+        />
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@android:color/white"
         android:overScrollMode="never"/>
+    <com.scwang.smartrefresh.layout.footer.ClassicsFooter
+
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 </com.scwang.smartrefresh.layout.SmartRefreshLayout>
