--- a/app/src/main/res/layout/login_view.xml
+++ b/app/src/main/res/layout/login_view.xml
@@ -28,16 +28,6 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <View
-        android:id="@+id/verify_point"
-        android:layout_width="0dp"
-        android:layout_height="@dimen/dp_2"
-        android:layout_marginTop="@dimen/dp_6"
-        android:background="@color/red2e"
-        android:visibility="invisible"
-        app:layout_constraintLeft_toLeftOf="@+id/verify_login"
-        app:layout_constraintRight_toRightOf="@+id/verify_login"
-        app:layout_constraintTop_toBottomOf="@+id/verify_login" />
-    <View
         android:id="@+id/account_point"
         android:layout_width="0dp"
         android:layout_height="@dimen/dp_2"
@@ -47,15 +37,22 @@
         app:layout_constraintRight_toRightOf="@+id/account_login"
         app:layout_constraintTop_toBottomOf="@+id/account_login" />
 
-
+    <View
+        android:id="@+id/verify_point"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/dp_2"
+        android:layout_marginTop="@dimen/dp_6"
+        app:layout_constraintLeft_toLeftOf="@+id/verify_login"
+        app:layout_constraintRight_toRightOf="@+id/verify_login"
+        app:layout_constraintTop_toBottomOf="@+id/verify_login" />
 
     <androidx.constraintlayout.widget.Group
         android:id="@+id/more_type_group"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:constraint_referenced_ids="verify_point,account_point,verify_login,account_login" />
+        app:constraint_referenced_ids="verify_login,account_login" />
     <!--账号登录输入模块-->
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/account_module"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -63,31 +60,47 @@
         android:layout_marginTop="@dimen/dp_20"
         android:layout_marginRight="@dimen/dp_35"
         android:background="@drawable/account_shape"
-        android:orientation="vertical"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/account_point">
 
+        <ImageView
+            android:id="@+id/delete_account_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="@dimen/dp_15"
+            android:src="@mipmap/ic_delete"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="@+id/account_name"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/account_name" />
+
         <EditText
             android:id="@+id/account_name"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/dp_15"
             android:layout_marginTop="@dimen/dp_12"
             android:layout_marginRight="@dimen/dp_15"
-            android:layout_marginBottom="@dimen/dp_12"
             android:background="@null"
             android:hint="用户名/手机/邮箱"
-            android:textSize="@dimen/sp_14" />
+            android:imeOptions="actionNext"
+            android:textSize="@dimen/sp_14"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toLeftOf="@+id/delete_account_name"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <View
+            android:id="@+id/account_cut_line"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp_1"
-            android:background="@color/gray" />
+            android:layout_marginTop="@dimen/dp_12"
+            android:background="@color/gray"
+            app:layout_constraintTop_toBottomOf="@+id/account_name" />
 
         <EditText
             android:id="@+id/account_secrete"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/dp_15"
             android:layout_marginTop="@dimen/dp_12"
@@ -95,8 +108,25 @@
             android:layout_marginBottom="@dimen/dp_12"
             android:background="@null"
             android:hint="请输入密码"
-            android:textSize="@dimen/sp_14" />
-    </LinearLayout>
+            android:imeOptions="actionDone"
+            android:inputType="textPassword"
+            android:textSize="@dimen/sp_14"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toLeftOf="@+id/is_visible"
+            app:layout_constraintTop_toBottomOf="@+id/account_cut_line" />
+
+        <ImageView
+            android:id="@+id/is_visible"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="invisible"
+            android:src="@drawable/selector_login_eye"
+            app:layout_constraintBottom_toBottomOf="@+id/account_secrete"
+            app:layout_constraintRight_toRightOf="@+id/delete_account_name"
+            app:layout_constraintTop_toTopOf="@+id/account_secrete" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
     <!--验证码登录输入模块-->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/verify_area"
