--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -241,4 +241,11 @@
     <declare-styleable name="LoginView">
         <attr format="boolean" name="isMoreType"/>
     </declare-styleable>
+
+    <declare-styleable name="BottomTabView">
+        <attr name="tabNum" format="integer" />
+        <attr name="selectedColor" format="color" />
+        <attr name="unSelectedColor" format="color" />
+    </declare-styleable>
+
 </resources>
