--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -36,7 +36,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/dp_10"
         android:background="@drawable/bg_advert_time"
-        android:text="4s"
+        android:text="跳过 5s"
         android:visibility="invisible"
         android:textSize="@dimen/sp_11"
         app:layout_constraintRight_toRightOf="parent"
